docker/logs/dag_id=etl/run_id=scheduled__2022-07-21T00:00:00+00:00/task_id=get_data/attempt=1.log
[2022-07-22 07:30:29,747] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: etl.get_data scheduled__2022-07-21T00:00:00+00:00 [queued]>
[2022-07-22 07:30:29,753] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: etl.get_data scheduled__2022-07-21T00:00:00+00:00 [queued]>
[2022-07-22 07:30:29,754] {taskinstance.py:1376} INFO - 
--------------------------------------------------------------------------------
[2022-07-22 07:30:29,755] {taskinstance.py:1377} INFO - Starting attempt 1 of 1
[2022-07-22 07:30:29,756] {taskinstance.py:1378} INFO - 
--------------------------------------------------------------------------------
[2022-07-22 07:30:29,764] {taskinstance.py:1397} INFO - Executing <Task(_PythonDecoratedOperator): get_data> on 2022-07-21 00:00:00+00:00
[2022-07-22 07:30:29,768] {standard_task_runner.py:52} INFO - Started process 12714 to run task
[2022-07-22 07:30:29,770] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'etl', 'get_data', 'scheduled__2022-07-21T00:00:00+00:00', '--job-id', '39', '--raw', '--subdir', 'DAGS_FOLDER/pipeline_2.py', '--cfg-path', '/tmp/tmp7krjpq6d', '--error-file', '/tmp/tmpz19mnbgj']
[2022-07-22 07:30:29,771] {standard_task_runner.py:80} INFO - Job 39: Subtask get_data
[2022-07-22 07:30:29,809] {task_command.py:371} INFO - Running <TaskInstance: etl.get_data scheduled__2022-07-21T00:00:00+00:00 [running]> on host b51f0a1d5848
[2022-07-22 07:30:29,851] {taskinstance.py:1591} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=etl
AIRFLOW_CTX_TASK_ID=get_data
AIRFLOW_CTX_EXECUTION_DATE=2022-07-21T00:00:00+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2022-07-21T00:00:00+00:00
[2022-07-22 07:30:30,506] {base.py:68} INFO - Using connection ID 'pg' for task execution.
[2022-07-22 07:30:30,517] {taskinstance.py:1909} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/decorators/base.py", line 179, in execute
    return_value = super().execute(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 171, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 189, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/pipeline_2.py", line 43, in get_data
    file
psycopg2.errors.SyntaxError: syntax error at or near "sdtin"
LINE 1: copy employees_temp from sdtin with csv header delimiter as ...
                                 ^

[2022-07-22 07:30:30,529] {taskinstance.py:1420} INFO - Marking task as FAILED. dag_id=etl, task_id=get_data, execution_date=20220721T000000, start_date=20220722T073029, end_date=20220722T073030
[2022-07-22 07:30:30,538] {standard_task_runner.py:97} ERROR - Failed to execute job 39 for task get_data (syntax error at or near "sdtin"
LINE 1: copy employees_temp from sdtin with csv header delimiter as ...
                                 ^
; 12714)
[2022-07-22 07:30:30,573] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-07-22 07:30:30,597] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
